<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <PreferenceCategory
        android:title="@string/font_size_zapisi_category">

        <ListPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="0"
            android:entries="@array/style_array"
            android:entryValues="@array/style_array_value"
            android:key="@string/numberKeyStyle"
            android:title="@string/number"/>
        <ListPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="0"
            android:entries="@array/style_array"
            android:entryValues="@array/style_array_value"
            android:key="@string/summaKeyStyle"
            android:title="@string/summa"/>
        <ListPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="0"
            android:entries="@array/style_array"
            android:entryValues="@array/style_array_value"
            android:key="@string/avansKeyStyle"
            android:title="@string/avans"/>
        <ListPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="0"
            android:entries="@array/style_array"
            android:entryValues="@array/style_array_value"
            android:key="@string/noteKeyStyle"
            android:title="@string/note"/>
        <ListPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="2"
            android:entries="@array/style_array"
            android:entryValues="@array/style_array_value"
            android:key="@string/dateKeyStyle"
            android:title="@string/date"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/font_size_obshee_category">

        <ListPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="0"
            android:entries="@array/style_array"
            android:entryValues="@array/style_array_value"
            android:key="@string/zarplataKeyStyle"
            android:title="@string/zarplata"/>
        <ListPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="0"
            android:entries="@array/style_array"
            android:entryValues="@array/style_array_value"
            android:key="@string/avans_key_obsheeKeyStyle"
            android:title="@string/avans"/>
        <ListPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="0"
            android:entries="@array/style_array"
            android:entryValues="@array/style_array_value"
            android:key="@string/OstatokKeyStyle"
            android:title="@string/Ostatok"/>
    </PreferenceCategory>
</PreferenceScreen>