<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <PreferenceCategory
        android:title="@string/font_size_zapisi_category">

        <ListPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="14"
            android:entries="@array/font_size"
            android:entryValues="@array/font_size"
            android:key="@string/number"
            android:title="@string/number"/>
        <ListPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="14"
            android:entries="@array/font_size"
            android:entryValues="@array/font_size"
            android:key="@string/summa"
            android:title="@string/summa"/>
        <ListPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="14"
            android:entries="@array/font_size"
            android:entryValues="@array/font_size"
            android:key="@string/avans"
            android:title="@string/avans"/>
        <ListPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="12"
            android:entries="@array/font_size"
            android:entryValues="@array/font_size"
            android:key="@string/note"
            android:title="@string/note"/>
        <ListPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="12"
            android:entries="@array/font_size"
            android:entryValues="@array/font_size"
            android:key="@string/date"
            android:title="@string/date"/>
        <ListPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="12"
            android:entries="@array/font_size"
            android:entryValues="@array/font_size"
            android:key="@string/date_period_key"
            android:title="@string/date_period"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/font_size_obshee_category">

        <ListPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="16"
            android:entries="@array/font_size"
            android:entryValues="@array/font_size"
            android:key="@string/zarplata"
            android:title="@string/zarplata"/>
        <ListPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="16"
            android:entries="@array/font_size"
            android:entryValues="@array/font_size"
            android:key="@string/avans_key_obshee"
            android:title="@string/avans"/>
        <ListPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="16"
            android:entries="@array/font_size"
            android:entryValues="@array/font_size"
            android:key="@string/Ostatok"
            android:title="@string/Ostatok"/>
    </PreferenceCategory>
</PreferenceScreen>