<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBoxPreference
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:defaultValue="false"
        android:key="check_box_fix_height_item"
        android:title="Фиксировать высоту записи"/>
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="check_box_note_one_line"
        android:title="Заметка в одну строку"/>
    <ListPreference
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:defaultValue="30"
        android:enabled="true"
        android:entries="@array/zapisi_size"
        android:entryValues="@array/zapisi_size"
        android:key="@string/zapisi_size_key"
        android:persistent="true"
        android:summary="@string/zapisi_size_key_subtitle"
        android:title="@string/zapisi_size_key"/>
    <PreferenceScreen
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:key="@string/font_size"
        android:title="@string/font_size">
    </PreferenceScreen>
    <PreferenceScreen
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:key="@string/font_style"
        android:title="@string/font_style">
    </PreferenceScreen>
    <PreferenceScreen
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:key="@string/reset"
        android:title="@string/reset">
    </PreferenceScreen>
</PreferenceScreen>